--- a/ComicBookGallery/ComicBookGallery/Views/Detail.cshtml
+++ b/ComicBookGallery/ComicBookGallery/Views/Detail.cshtml
@@ -1,16 +1,5 @@
 ﻿@{
     Layout = null;
-    var seriesTitle = "The Amazing Spider-Man";
-    var issueNumber = 700;
-    var description = "<p>Final issue! Witness the final hours of Doctor Octopus' life and his one, last, great act of revenge! Even if Spider-Man survives... <strong>will Peter Parker?</strong></p>";
-    var artists = new string[]
-    {
-        "Script: Dan Slott",
-        "Pencils: Humberto Ramos",
-        "Inks: Victor Olazaba",
-        "Colors: Edgar Delgado",
-        "Letters: Chris Eliopoulos"
-    };
 }
 
 <!DOCTYPE html>
@@ -22,15 +11,15 @@
 </head>
 <body>
     <div align="center">
-        <h1>@seriesTitle</h1>
-        <h2>Issue#: @issueNumber</h2>
+        <h1>@ViewBag.SeriesTitle</h1>
+        <h2>Issue#: @ViewBag.IssueNumber</h2>
         <h5>Description</h5>
-        <div>@description</div>
-        @if (artists.Length > 0)
+        <div>@ViewBag.Description</div>
+        @if (ViewBag.Artists.Length > 0)
         {
             <h5>Artists:</h5>
             <div>
-                @foreach (var artist in artists)
+                @foreach (var artist in ViewBag.Artists)
                 {
                     <p>@artist</p>
                 }
